--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,11 @@
-FROM python:3.11-alpine
+FROM python:3.11
 
-RUN mkdir /app
-WORKDIR /app
+WORKDIR /code
 
-ADD requirements.txt /app/requirements.txt
+COPY ./requirements.txt /code/requirements.txt
 
-RUN python -m pip install -r requirements.txt
+RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-ADD . ./app
+COPY ./app /code/app
 
-CMD uvicorn main:app --host 0.0.0.0 --port 8000
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
