--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,19 @@ services:
     volumes:
       - ./data/db:/data/db
 
+        #   frontend:
+        #     build:
+        #       context: ./frontend
+        #       dockerfile: Dockerfile
+        #     ports:
+        #       - "3000:3000"
+        #     environment:
+        #       NODE_ENV: production
+
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile 
+      dockerfile: ./backend/Dockerfile
     ports:
       - "8000:8000"
     environment:
