feat(frontend): add initial frontend

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,6 +25,7 @@
   "include": [
     ".eslintrc.cjs",
     "next-env.d.ts",
+    "src/types/server.d.ts",
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
